welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: not found: value setColor
	setColor(Color.YELLOW);
        ^FlowerPot:8: error: not found: value setColor
	setColor(c);
        ^